--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
 
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
