player win dialog complete

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.mikhaellopez:circularimageview:4.3.0'
 
+    implementation "com.airbnb.android:lottie:4.0.0"
+
 
 }
