AI choose symbol Activity created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tictactoe">
         <activity
+            android:name=".AiChooseSymbolActivity"
+            android:exported="true" />
+        <activity
             android:name=".AIGetPlayerNameActivity"
             android:exported="true" />
         <activity
             android:name=".OfflineGameActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ChooseSymbolActivity"
             android:exported="true" />
